[ADD] Add Submit External Transaction
