# docs/swagger.json
@@ -81,6 +81,40 @@
                 }
             }
         },
+        "/api/v1/proxy/transactions": {
+            "post": {
+                "description": "Submit external transaction.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "proxy"
+                ],
+                "summary": "Submit external transaction.",
+                "parameters": [
+                    {
+                        "description": "SubmitExternalTransactionRequest",
+                        "name": "SubmitExternalTransactionRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.SubmitExternalTransactionRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.SubmitExternalTransactionResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/tokens": {
             "get": {
                 "description": "Get all tokens.",
@@ -770,6 +804,17 @@
                 }
             }
         },
+        "models.Progress": {
+            "type": "object",
+            "properties": {
+                "quantity": {
+                    "type": "number"
+                },
+                "unit": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Quantity": {
             "type": "object",
             "properties": {
@@ -846,11 +891,27 @@
                 }
             }
         },
+        "models.SubmitExternalTransactionRequest": {
+            "type": "object",
+            "properties": {
+                "cbor": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.SubmitExternalTransactionResponse": {
+            "type": "object",
+            "properties": {
+                "txHash": {
+                    "type": "string"
+                }
+            }
+        },
         "models.SyncProgress": {
             "type": "object",
             "properties": {
                 "progress": {
-                    "$ref": "#/definitions/models.Quantity"
+                    "$ref": "#/definitions/models.Progress"
                 },
                 "status": {
                     "type": "string"
